# cfMEX_tools

./: LICENCE.md  README.md  Utility.py  __init__.py  cfMEX_end-motif.py  cfMEX_end-motif_V2.py  cfMEX_tools.py  main.py  project.toml  pyproject.toml  setup.py
dataset/: 1Mb_Window_Num.csv  EM_Window.csv  FS_Range.csv
scr/: Utility.py  __init__.py  cfMEX_Bam2Frag.py  cfMEX_Bam2Frag_ver2.py  cfMEX_EndMotif.py  cfMEX_FragSize.py  cfMEX_Range.py  cfMEX_SplRatio.py
test/: test.sh
utils/: __init__.py  checkNColumns.py  locSeparateThreads.py  rangeSeparateThreads.py  timeStamp.py
